fix windows compilation issue